# birthday_api

./: .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.nginx  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt  supervisord.conf
api/: admin.py  models.py  tests.py  urls.py  views.py
api/management/commands/: notify_birthdays.py
api/migrations/: 0001_initial.py  0002_alter_member_phone_number.py  0002_alter_member_profile_picture.py  0002_remove_auth_name.py
app/: gunicorn.prod.conf.py  requirements.prod.txt  requirements.txt
app/api/: admin.py  models.py  notify_birthdays.py  script_notify_birthdays.py  serializers.py  services.py  tasks.py  tests.py  views.py
app/api/management/commands/: notify_birthdays.py
app/api/migrations/: 0001_initial.py  0003_alter_manager_member_info.py  0004_department_manager_department_member_department.py  0005_organization_department_organization.py
app/api/templates/api/: birthdays_of_the_day.html
app/core/: authentication.py  celery.py  settings.py  urls.py
config/gunicorn/: dev.py
core/: settings.py
