[tool.poetry]
name = "birthday-api"
version = "0.1.0"
description = ""
authors = ["matheus <matheuscosta.tech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0"
python-decouple = "^3.8"
djangorestframework = "^3.15.1"
firebase-admin = "^6.5.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
